cricketWeb/web/resources/css/mycss.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : 02-May-2019, 17:24:25
    Author     : pedro
*/

#hm{
    color:white;
    margin-right: auto;
    margin:initial;
}

.progress{
    height: 2.5rem;
    padding-top: 10px;
    width: 165px;
    color:#545454;
    
    
}

.progress-bar{
    background-color: #545454;
}

.incr{
    width: 35px;
    height: 38px;
}

.decr{
    width: 35px;
    height: 38px;
}

.edit{
    height: 30px;
    width: 30px;
    padding-bottom: 6px;
}

.remove{
    height: 30px;
    width: 30px;
    padding-bottom: 6px;
}

.copyright{
    padding:148px 100px;
    text-align:center;
}

.progress span {
    position: absolute;
    display: block;
    width: 100%;
    color: black;
 }
 
 .rank{
     width: 30px;
     height: 30px;
 }
 
 .info{
     width: 35px;
    height: 38px;
 }

 
 .col-1{
     margin:inherit;
 }
 
 #j_idt35 {

    padding-top: 30px;

}
 
 .grow{
     height: 300px;
     width: 380px;
 }

 .grow:hover{
     -webkit-transform: scale(1.3);
        -ms-transform: scale(1.3);
        transform: scale(1.3)
 }

